--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,39 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- release -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <branchName>master</branchName>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.scm</groupId>
+                        <artifactId>maven-scm-provider-gitexe</artifactId>
+                        <version>1.9.5</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <connection>scm:git:git@github.com:tomasj/payment-tracker.git</connection>
+        <developerConnection>scm:git:git@github.com:tomasj/payment-tracker.git</developerConnection>
+        <url>https://github.com/tomasj/payment-tracker</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>local-stagging</id>
+            <name>Local stagging</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
 
 </project>
