--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>cz.teejays.payment-tracker</groupId>
     <artifactId>payment-tracker</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -191,7 +191,7 @@
         <connection>scm:git:git@github.com:tomasj/payment-tracker.git</connection>
         <developerConnection>scm:git:git@github.com:tomasj/payment-tracker.git</developerConnection>
         <url>https://github.com/tomasj/payment-tracker</url>
-        <tag>payment-tracker-1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
